# rusthree

./: .gitignore  Cargo.toml  LICENSE  README.md
aws-creds/: Cargo.toml
aws-creds/src/: credentials.rs  error.rs  lib.rs
aws-region/: Cargo.toml
aws-region/src/: region.rs
s3/: Cargo.toml
s3/src/: bucket.rs  command.rs  error.rs  lib.rs  serde_types.rs  signing.rs  utils.rs
s3/src/request/: mod.rs  request_trait.rs  reqwest_backend.rs
