[package]
name = "aws-creds"
version = "0.1.0"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
license = "MIT"
edition = "2021"

[lib]
name = "awscreds"
path = "src/lib.rs"

[dependencies]
thiserror = "1"
dirs = "5"
rust-ini = "0.19.0"
url = "2"
quick-xml = { version = "0.28", features = [ "serialize" ] }
serde = { version = "1", features = ["derive"] }
time = { version = "^0.3.6", features = ["serde", "serde-well-known"] }
log = "0.4"

[dev-dependencies]
env_logger = "0.10"
serde_json = "1"
