[package]
name = "rusthree"
version = "0.1.0"
authors = ["Sebastian Dobe <sebastiandobe@mailbox.org>"]
license = "MIT"
edition = "2021"

[lib]
name = "s3"
path = "src/lib.rs"

[dependencies]
async-trait = "0.1"
aws-creds = { path = "../aws-creds" }
aws-region = { path = "../aws-region" }
base64 = "0.21"
cfg-if = "1"
time = { version = "^0.3.6", features = ["formatting", "macros"] }
futures = { version = "0.3" }
futures-io = { version = "0.3" }
futures-util = { version = "0.3", features = ["io"] }
hex = "0.4"
hmac = "0.12"
http = "0.2"
log = "0.4"
md5 = "0.7"
percent-encoding = "2"
reqwest = { version = "0.11", default-features = false, features = [
    "brotli", "rustls-tls", "rustls-tls-webpki-roots", "stream"
] }
serde = "1"
serde_derive = "1"
quick-xml = { version = "0.30.0", features = ["serialize"] }
sha2 = "0.10"
thiserror = "1"
tokio = { version = "1.18.6", features = [
    "io-util",
], default-features = false }
tokio-stream = { version = "0.1" }
url = "2"
minidom = { version = "0.15" }
bytes = { version = "1" }

[features]
default = []
no-verify-ssl = []
fail-on-err = []

[dev-dependencies]
tokio = { version = "1", features = ["rt", "rt-multi-thread", "macros", "fs"] }
uuid = { version = "1", features = ["v4"] }
env_logger = "0.10"
anyhow = "1"
